# bepeefe

./: .gitignore  Cargo.toml  LICENSE  README.md  bpf.c  clippy.toml  flake.nix  justfile  rust-toolchain.toml
c-examples/: Cargo.toml  map_array.rs  map_hash.rs  snake.c  snake.rs
crates/bepeefe-cli/: Cargo.toml
crates/bepeefe-cli/src/: btf.rs  core.rs  main.rs  maps.rs  programs.rs  render.rs
crates/bepeefe-wasm/: Cargo.toml
crates/bepeefe-wasm/src/: capture.rs  disasm.rs  lib.rs  object.rs  schema.rs  types.ts  vm.rs
examples/: fibonacci.rs  map_array.rs  map_hash.rs  snake.rs  sum_primes.rs
examples/bpf/: basic_instructions.c  fibonacci.c  map_array.c  map_hash.c  sk_lookup.c  snake.c  sum_primes.c  trace_print.c
examples/c/: fibonacci.rs  justfile  map_array.rs  map_hash.rs  snake.rs  sum_primes.rs
examples/rust/: Cargo.toml  build.rs  justfile
examples/rust/src/: lib.rs
rust-examples/: Cargo.toml  build.rs  hash_map.rs  justfile  lib.rs  snake.rs  tcpstates.rs
src/: bpf_prog.rs  btf.rs  capture.rs  error.rs  hook.rs  isa.rs  lib.rs  loader.rs  main.rs  maps.rs  object.rs  program.rs  value.rs  verifier.rs  vm.rs
src/btf/: access.rs  builder.rs  ext.rs  value.rs
src/isa/: alu.rs  dump.rs  jmp.rs  load.rs
src/loader/: btf.rs  elf.rs
src/loader/btf/: ext.rs  types.rs
src/maps/: array.rs  hash_table.rs  stack.rs
src/program/: btf.rs  elf.rs
src/program/btf/: ext.rs  types.rs
src/verifier/: branch.rs  checks.rs  event.rs  tests.rs  walk.rs
src/vm/: cpu.rs  debugger.rs  env.rs  helpers.rs  map_handle.rs  mem.rs  prepare.rs  prepared.rs  ptr.rs  state.rs  task.rs  world.rs
src/vm/helpers/: map_ops.rs  maps.rs  meta.rs  printk.rs  probe_ops.rs  probes.rs
