[package]
name = "bepeefe"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
object = "0.37.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
crossterm = "0.29.0"
rand = "0.9.2"

[[example]]
name = "fibonacci"
path = "examples/c/fibonacci.rs"

[[example]]
name = "map_array"
path = "examples/c/map_array.rs"

[[example]]
name = "map_hash"
path = "examples/c/map_hash.rs"

[[example]]
name = "snake"
path = "examples/c/snake.rs"

[[example]]
name = "sum_primes"
path = "examples/c/sum_primes.rs"

[profile.release]
debug = true
