[package]
name = "bepeefe"
version.workspace = true
edition.workspace = true

[dependencies]
byteorder.workspace = true
object.workspace = true
serde.workspace = true
thiserror.workspace = true
strum.workspace = true
bitflags = "2.13.0"

[lints]
workspace = true

[workspace]
resolver = "3"
members = [
  ".",
  "crates/bepeefe-cli",
  "crates/bepeefe-wasm",
  "c-examples",
  "rust-examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bepeefe = { path = "." }

byteorder = "1.5.0"
object = { version = "0.39.1", default-features = false, features = [
  "read_core",
  "elf",
] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1"
serde_repr = "0.1.20"
thiserror = "2.0.17"
strum = { version = "0.28.0", features = ["derive"], default-features = false }

clap = { version = "4.5", features = ["derive"] }
tabled = "0.21"

wasm-bindgen = "0.2.126"
serde-wasm-bindgen = "0.6"
js-sys = "0.3.95"
indexmap = "2"

crossterm = "0.29.0"
rand = "0.10.1"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
disallowed_macros = "deny"

[profile.release]
lto = "fat"
opt-level = "z"

[dev-dependencies]
serde_json.workspace = true
