[package]
name = "bepeefe-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bepeefe.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
indexmap = { workspace = true, features = ["serde"] }

[lints]
workspace = true
